# Palindrome

./: CMakeLists.txt  Readme.txt
inc/: palindrome.hpp
src/: main.cpp  palindrome.cpp
tests/: CMakeLists.txt  palindrome-test.cpp
